<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Loan Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="down_payment">Down Payment</string>
    <string name="term">Term</string>
    <string name="year">Year(s)</string>
    <string name="annual_interest_rate">Annual Interest Rate</string>
    <string name="sym_percent">%</string>
    <string name="monthly_repayment">Monthly Repayment</string>
    <string name="total_repayment">Total Repayment</string>
    <string name="total_interest">Total Interest</string>
    <string name="average_monthly_interest">Average Monthly Interest</string>
    <string name="sym_double_column">:</string>
    <string name="default_result">0.00</string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
    <string name="copyright">Copyright © CodePlay Studio 2012-2019</string>
    <string name="empty_input">Please enter the %1$s.</string>
    <string name="err_term">Invalid Input: Term cannot be 0. </string>
    <string name="err_calculation">Calculation failed: Invalid Input. Please check your input valid and try again.</string>
    
    <color name="button_default">#0099CC</color>
	<color name="button_highlight">#28A9D4</color>
</resources>
