<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@android:color/white" >
    
    <TableLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:stretchColumns="2" >
	    
        <TableRow >
            <TextView
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@android:color/black"
	            android:text="@string/loan_amount"/>
            <EditText android:id="@+id/loan_amount"
                android:background="@drawable/bg_edittext"
                android:layout_span="4"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:inputType="numberDecimal"
	            android:maxLength="12"
	            android:singleLine="true"
	            android:ellipsize="end" />
        </TableRow>
        
        <TableRow >
            <TextView
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@android:color/black"
	            android:text="@string/down_payment" />
            <EditText android:id="@+id/down_payment"
                android:background="@drawable/bg_edittext"
                android:layout_span="4"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:inputType="numberDecimal"
	            android:maxLength="12" 
	            android:singleLine="true"
	            android:ellipsize="end" />
        </TableRow>
        
        <TableRow >
            <TextView
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@android:color/black"
	            android:text="@string/term" />
            <EditText android:id="@+id/term"
                android:background="@drawable/bg_edittext"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:gravity="center"
	            android:inputType="number" 
	            android:minWidth="50dp"
	            android:maxLength="3"
	            android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:textColor="@android:color/black"
	            android:text="@string/year" />
        </TableRow>
        
        <TableRow >
            <TextView
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="@android:color/black"
	            android:text="@string/annual_interest_rate" />
            <EditText android:id="@+id/annual_interest_rate"
                android:background="@drawable/bg_edittext"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:paddingLeft="5dp"
	            android:paddingRight="5dp"
	            android:gravity="center"
	            android:inputType="numberDecimal" 
	            android:minWidth="100dp"
	            android:maxLength="5"
	            android:singleLine="true" />
            <TextView
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:textColor="@android:color/black"
	            android:text="@string/sym_percent" />
        </TableRow>
        
	</TableLayout>

	<View
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:layout_marginTop="@dimen/activity_vertical_margin"
		android:background="#0099CC" />
	
    <TableLayout
        android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="@dimen/activity_vertical_margin"
	    android:background="@drawable/bg"
	    android:stretchColumns="2" >
        
        <TableRow >
            <TextView
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/black"
		        android:text="@string/monthly_repayment" />
            <TextView
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/black"
		        android:text="@string/sym_double_column" />
            <TextView android:id="@+id/monthly_repayment"
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="right"
		        android:singleLine="true"
		        android:ellipsize="end"
		        android:textColor="@android:color/black"
		        android:text="@string/default_result" />
        </TableRow>
        
        <TableRow 
            android:layout_marginTop="10dp" >
            <TextView
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/black"
		        android:text="@string/total_repayment" />
            <TextView
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/black"
		        android:text="@string/sym_double_column" />
            <TextView android:id="@+id/total_repayment"
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="right"
		        android:singleLine="true"
		        android:ellipsize="end"
		        android:textColor="@android:color/black"
		        android:text="@string/default_result" />
        </TableRow>
        
        <TableRow 
            android:layout_marginTop="10dp" >
            <TextView
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/black"
		        android:text="@string/total_interest" />
            <TextView
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/black"
		        android:text="@string/sym_double_column" />
            <TextView android:id="@+id/total_interest"
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="right"
		        android:singleLine="true"
		        android:ellipsize="end"
		        android:textColor="@android:color/black"
		        android:text="@string/default_result" />
        </TableRow>
        
        <TableRow 
            android:layout_marginTop="10dp" >
            <TextView
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/black"
		        android:text="@string/average_monthly_interest" />
            <TextView
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="@android:color/black"
		        android:text="@string/sym_double_column" />
            <TextView android:id="@+id/average_monthly_interest"
	            android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="right"
		        android:singleLine="true"
		        android:ellipsize="end"
		        android:textColor="@android:color/black"
		        android:text="@string/default_result" />
        </TableRow>
        
    </TableLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:padding="5dp"
		android:orientation="horizontal"
		android:background="#0099CC">

		<Button
            android:id="@+id/btnCalculate"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/ic_calculate"
            android:text="@string/calculate"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:drawableTop="@drawable/ic_reset"
            android:text="@string/reset"/>
        <!--
        <TextView android:id="@+id/button_calculate"
            android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/ic_calculate"
			android:gravity="center"
			android:textColor="@android:color/black"
			android:text="@string/calculate"
			android:clickable="true"
			android:onClick="onClick"
			android:background="@drawable/bg_button" />
        
        <View 
            android:layout_width="1dp"
			android:layout_height="match_parent"
			android:background="@android:color/black" />
        
        <TextView android:id="@+id/button_reset"
            android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:drawableTop="@drawable/ic_reset"
			android:gravity="center"
			android:textColor="@android:color/black"
			android:text="@string/reset"
			android:clickable="true"
			android:onClick="onClick"
			android:background="@drawable/bg_button" />
        -->
    </LinearLayout>
	
</LinearLayout>
    
</ScrollView>
